--- a/blog/client/src/styles/BlogForm.module.css
+++ b/blog/client/src/styles/BlogForm.module.css
@@ -1,11 +1,16 @@
-.test{
+.formContainer{
     background-color: rgb(111, 178, 255);
     color: white;
     border: 5px solid navy;
     border-radius: 3%;
 }
 
+.bgColorLightBlue{
+    background-color: rgb(111, 178, 255);
+}
+
 .label{
     border-bottom: 4px solid navy;
+    background-color: rgb(111, 178, 255);
 }
 
