--- a/blog/client/src/App.css
+++ b/blog/client/src/App.css
@@ -3,6 +3,11 @@
   padding: 0;
   margin: 0;
 }
-/* .footer-div {
-  z-index: -1;
-} */
+.footer-span {
+  text-align: center;
+  bottom: 0;
+  width: 100%;
+  margin: 8px auto;
+  position: absolute;
+  z-index: -1
+}
