View profiles & add getOneUser route to backend

--- a/blog/client/src/styles/BlogList.module.css
+++ b/blog/client/src/styles/BlogList.module.css
@@ -12,6 +12,16 @@
     border: 1.5px solid navy;
 }
 
+.link{
+    color: white;
+    text-decoration: none;
+}
+
+.link:hover{
+    color: navy;
+    text-decoration: underline;
+}
+
 .blogContainer{
     border: 3px solid navy;
 }
